# mdparser

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: HELP_TEST_RESULTS.md  NAME_RECOMMENDATIONS.md  NAME_SUGGESTIONS.md  TEST_SUMMARY.md
samples/: README.md  headings_level3.md  headings_level3_with_2lines.md  headings_level3_with_chars.md  headings_level3_with_chars_50.md  headings_level3_with_first_line.md
src/mdparser/: __init__.py  cli.py  extractors.py  parser.py  utils.py
tests/: README.md  __init__.py  test_document.md  test_extractors.py
